--- a/home_page.html
+++ b/home_page.html
@@ -7,7 +7,7 @@
     <title>Trang chủ quản trị</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./login_page.css">
+    <link rel="stylesheet" href="./styles/home_page.css">
 </head>
 
 <body>
