--- a/course_page.html
+++ b/course_page.html
@@ -26,23 +26,23 @@
             <ul>
                 <li>
                     <i class="fa-solid fa-house"></i>
-                    <a href="#">Bảng điều khiển</a>
+                    <a href="http://127.0.0.1:5500/home_page.html#">Bảng điều khiển</a>
                 </li>
                 <li class="active">
                     <i class="fa-solid fa-book"></i>
-                    <a href="#">Quản lý khoá học</a>
+                    <a href="http://127.0.0.1:5500/course_page.html#">Quản lý khoá học</a>
                 </li>
                 <li>
                     <i class="fa-solid fa-pen"></i>
-                    <a href="#">Quản lý lớp học</a>
+                    <a href="http://127.0.0.1:5500/class_page.html#">Quản lý lớp học</a>
                 </li>
                 <li>
                     <i class="fa-solid fa-graduation-cap"></i>
-                    <a href="#">Quản lý sinh viên</a>
+                    <a href="http://127.0.0.1:5500/student_page.html#">Quản lý sinh viên</a>
                 </li>
                 <li>
                     <i class="fa-solid fa-users"></i>
-                    <a href="#">Quản lý tài khoản</a>
+                    <a href="http://127.0.0.1:5500/account_page.html#">Quản lý tài khoản</a>
                 </li>
             </ul>
         </nav>
@@ -107,7 +107,7 @@
         <div>Copyright Rikkei Academy @2023</div>
     </footer>
 
-
+    <script src="./apps/course_page.js"></script>
 </body>
 
 </html>
