--- a/login_page.html
+++ b/login_page.html
@@ -15,18 +15,17 @@
     <form class="login-form" method="POST">
         <p>Đăng nhập</p>
         <div class="mb-3">
-            <label for="login-email">Email</label>
-            <input type="email" id="login-email">
+            <label for="loginEmail">Email</label>
+            <input type="email" id="loginEmail">
         </div>
         <div class="mb-3">
-            <label for="login-pw">Mật khẩu</label>
-            <input type="password" id="login-pw">
+            <label for="loginPw">Mật khẩu</label>
+            <input type="password" id="loginPw">
         </div>
-        <button type="submit" class="btn">Đăng nhập</button>
+        <button type="submit" class="btn" id="loginBtn">Đăng nhập</button>
     </form>
 
-
-
+    <script src="./apps/login_page.js"></script>
 </body>
 
 </html>
