--- a/account_page.html
+++ b/account_page.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cập nhật khoá học</title>
-    <link rel="stylesheet" href="./styles/course_page_2.css">
+    <title>Trang quản trị tài khoản</title>
+    <link rel="stylesheet" href="./styles/course_page.css">
     <script src="https://kit.fontawesome.com/7bac960b93.js" crossorigin="anonymous"></script>
 
 </head>
@@ -28,7 +28,7 @@
                     <i class="fa-solid fa-house"></i>
                     <a href="http://127.0.0.1:5500/home_page.html#">Bảng điều khiển</a>
                 </li>
-                <li class="active">
+                <li>
                     <i class="fa-solid fa-book"></i>
                     <a href="http://127.0.0.1:5500/course_page.html#">Quản lý khoá học</a>
                 </li>
@@ -40,7 +40,7 @@
                     <i class="fa-solid fa-graduation-cap"></i>
                     <a href="http://127.0.0.1:5500/student_page.html#">Quản lý sinh viên</a>
                 </li>
-                <li>
+                <li class="active">
                     <i class="fa-solid fa-users"></i>
                     <a href="http://127.0.0.1:5500/account_page.html#">Quản lý tài khoản</a>
                 </li>
@@ -48,49 +48,66 @@
         </nav>
 
         <div class="main-content">
-            <h2 class="uppercase">Quản lý khoá học</h2>
+            <h2 class="uppercase">Quản lý tài khoản</h2>
+            <div class="search-menu">
+                <button class="add-btn">Thêm mới</button>
+                <div>
+                    <input type="text" class="search-bar" placeholder="Nhập khoá học cần tìm kiếm">
+                    <button class="search-btn">Tìm kiếm</button>
+                </div>
+                <label for="" class="sort">Sắp xếp
+                    <select name="" id="">
+                        <option value="">Lựa chọn</option>
+                        <option value="">Tăng dần</option>
+                        <option value="">Giảm dần</option>
+                    </select>
+                </label>
+            </div>
 
-            <div class="modal">
-                <p>Cập nhật khoá học<span class="close">&times;</span></p>
-                <form>
-                    <div class="edit-form">
-                        <label for="course-id">Mã khoá học <span class="red-color">(*)</span></label>
-                        <input type="text" id="course-id" name="course-id" required>
-                    </div>
-                    <div class="edit-form">
-                        <label for="course-name">Tên khoá học <span class="red-color">(*)</span></label>
-                        <input type="text" id="course-name" name="course-name" required>
-                    </div>
-                    <div class="edit-form">
-                        <label for="course-name">Thời gian <span class="red-color">(*)</span></label>
-                        <input type="number" id="course-time" name="course-time" required>
-                    </div>
-                    <div class="course-status">
-                        <div>Trạng thái</div>
-                        <div>
-                            <input type="radio" id="course-status-1" name="course-status" value="1" checked>
-                            <label for="course-status-1">Hoạt động</label>
-                        </div>
-                        <div>
-                            <input type="radio" id="course-status-0" name="course-status" value="0">
-                            <label for="course-status-0">Không hoạt động</label>
-                        </div>
-                    </div>
-                    <div class="submit-btn">
-                        <button type="submit" class="button">Cập nhật</button>
-                        <button type="button" class="button">Đóng</button>
-                    </div>
-                </form>
+
+            <table class="course-table">
+                <thead>
+                    <tr>
+                        <th>STT</th>
+                        <th>Email</th>
+                        <th>Mật khẩu</th>
+                        <th>Họ và tên</th>
+                        <th>Trạng thái</th>
+                        <th colspan="2">Hành động</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>anv@rikkeiacademy.vn</td>
+                        <td>123456</td>
+                        <td>Nguyễn Văn A</td>
+                        <td>Đang hoạt động</td>
+                        <td>
+                            <span class="button button-edit">Khoá</span>
+                        </td>
+                        <td>
+                            <span class="button button-delete">Mở khoá</span>
+                        </td>
+                </tbody>
+            </table>
+
+            <div class="pagination">
+                <a href="#">Prev</a>
+                <a href="#" class="pag-active">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">Next</a>
             </div>
         </div>
-    </div>
     </div>
 
     <footer>
         <div>Copyright Rikkei Academy @2023</div>
     </footer>
 
-
+    <script src="./apps/account_page.js"></script>
 </body>
 
 </html>
