--- a/login_page.html
+++ b/login_page.html
@@ -7,7 +7,7 @@
     <title>Trang đăng nhập</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/login_page.css">
+    <link rel="stylesheet" href="./src/styles/login_page.css">
 </head>
 
 <body>
@@ -16,16 +16,16 @@
         <p>Đăng nhập</p>
         <div class="mb-3">
             <label for="loginEmail">Email</label>
-            <input type="email" id="loginEmail">
+            <input type="email" id="loginEmail" name="loginEmail">
         </div>
         <div class="mb-3">
             <label for="loginPw">Mật khẩu</label>
-            <input type="password" id="loginPw">
+            <input type="password" id="loginPw" name="loginPw">
         </div>
-        <button type="submit" class="btn" id="loginBtn">Đăng nhập</button>
+        <button type="button" class="btn" id="loginBtn">Đăng nhập</button>
     </form>
 
-    <script src="./apps/login_page.js"></script>
+    <script src="./src/scripts/login_page.js"></script>
 </body>
 
 </html>
