--- a/home_page.html
+++ b/home_page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ quản trị</title>
-    <link rel="stylesheet" href="./styles/home_page.css">
+    <link rel="stylesheet" href="./src/styles/home_page.css">
     <script src="https://kit.fontawesome.com/7bac960b93.js" crossorigin="anonymous"></script>
 
 </head>
