--- a/course_page.html
+++ b/course_page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang quản trị khoá học</title>
-    <link rel="stylesheet" href="./styles/course_page.css">
+    <link rel="stylesheet" href="./src/styles/course_page.css">
     <script src="https://kit.fontawesome.com/7bac960b93.js" crossorigin="anonymous"></script>
 
 </head>
@@ -55,7 +55,7 @@
                     <input type="text" class="search-bar" placeholder="Nhập khoá học cần tìm kiếm">
                     <button class="search-btn">Tìm kiếm</button>
                 </div>
-                <label for="" class="sort">Sắp xếp
+                <label class="sort">Sắp xếp
                     <select name="" id="">
                         <option value="">Lựa chọn</option>
                         <option value="">Tăng dần</option>
@@ -76,7 +76,7 @@
                         <th colspan="2">Hành động</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="tbody">
                     <tr>
                         <td>1</td>
                         <td>RA01</td>
@@ -107,7 +107,8 @@
         <div>Copyright Rikkei Academy @2023</div>
     </footer>
 
-    <script src="./apps/course_page.js"></script>
+    <!-- <script src="./src/utils/local-data.js"></script> -->
+    <script src="src/scripts/course_page.js"></script>
 </body>
 
 </html>
