--- a/account_page.html
+++ b/account_page.html
@@ -76,19 +76,8 @@
                         <th colspan="2">Hành động</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>anv@rikkeiacademy.vn</td>
-                        <td>123456</td>
-                        <td>Nguyễn Văn A</td>
-                        <td>Đang hoạt động</td>
-                        <td>
-                            <span class="button button-edit">Khoá</span>
-                        </td>
-                        <td>
-                            <span class="button button-delete">Mở khoá</span>
-                        </td>
+                <tbody id="tbody">
+                    
                 </tbody>
             </table>
 
@@ -107,7 +96,7 @@
         <div>Copyright Rikkei Academy @2023</div>
     </footer>
 
-    <script src="./apps/account_page.js"></script>
+    <script src="./src/scripts/account_page.js"></script>
 </body>
 
 </html>
