--- a/class_page.html
+++ b/class_page.html
@@ -79,23 +79,8 @@
                         <th colspan="2">Hành động</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>C001</td>
-                        <td>HN-JV230508</td>
-                        <td>1000</td>
-                        <td>QuangND</td>
-                        <td>Java fullstack</td>
-                        <td>20</td>
-                        <td>Chờ lớp</td>
-                        <td>Khoá học 1</td>
-                        <td>
-                            <span class="button button-edit">Sửa</span>
-                        </td>
-                        <td>
-                            <span class="button button-delete">Xoá</span>
-                        </td>
+                <tbody id="tbody">
+                    
                 </tbody>
             </table>
 
@@ -155,7 +140,7 @@
         <div>Copyright Rikkei Academy @2023</div>
     </footer>
 
-    <script src="./apps/class_page.js"></script>
+    <script src="./src/scripts/class_page.js"></script>
 </body>
 
 </html>
