--- a/student_page.html
+++ b/student_page.html
@@ -79,7 +79,7 @@
                         <th colspan="2">Hành động</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="tbody">
                     <tr>
                         <td>1</td>
                         <td>SV001</td>
@@ -113,7 +113,7 @@
         <div>Copyright Rikkei Academy @2023</div>
     </footer>
 
-    <script src="./apps/student_page.js"></script>
+    <script src="./src/scripts/student_page.js"></script>
 </body>
 
 </html>
