--- a/home_page.html
+++ b/home_page.html
@@ -91,7 +91,7 @@
         <div>Copyright Rikkei Academy @2023</div>
     </footer>
 
-    <script src="./apps/home_page.js"></script>
+    <script src="./src/scripts/home_page.js"></script>
 </body>
 
 </html>
