--- a/course_page.html
+++ b/course_page.html
@@ -56,10 +56,10 @@
                     <button class="search-btn">Tìm kiếm</button>
                 </div>
                 <label class="sort">Sắp xếp
-                    <select name="" id="">
-                        <option value="">Lựa chọn</option>
-                        <option value="">Tăng dần</option>
-                        <option value="">Giảm dần</option>
+                    <select name="sort">
+                        <option value="0">Lựa chọn</option>
+                        <option value="1" id="sortAscending">Tăng dần</option>
+                        <option value="2" id="sortDescending">Giảm dần</option>
                     </select>
                 </label>
             </div>
