--- a/course_page.html
+++ b/course_page.html
@@ -105,7 +105,7 @@
         </div>
 
         <!-- Form thêm mới khóa học -->
-        <div class="modal overlay" id="addForm">
+        <div class="modal overlay" id="addFormDiv">
           <div class="modal-content">
             <p class="bold">Thêm mới khoá học<span class="close">&times;</span></p>
             <form id="addForm">
